--- a/mx/styles.css
+++ b/mx/styles.css
@@ -1,18 +1,15 @@
-/* not working */
 @font-face {
-font-family: "Old_English";
-src: url("https://elstest.github.io/mx/fonts/Old_English.ttf") format("truetype");
+    font-family: 'papyrusregular';
+    src: url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff2') format('woff2'),
+         url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-@font-face {
-font-family: "Papyrus_Local";
-src: url("https://elstest.github.io/mx/fonts/Papyrus_Local.ttf") format("truetype");
-}
-/* not working */
 
 
 
 body {
-	font-family: Papyrus_Local;
+	font-family: 'papyrusregular', Arial, sans-serif;
 	font-weight:normal;
 	font-style:normal;
 }
@@ -21,14 +18,9 @@ main {
 	border-width: 1150px;
 	margin: 50px;
 }
-footer {
-  font-family: papyrusregular;
-}
 p {
 	text-align: justify;
-	font-family: Old_English;
-	font-weight:normal;
-	font-style:normal;
+	font-family: ;
 }
 a {
   display: inline-block;
