--- a/mx/styles.css
+++ b/mx/styles.css
@@ -1,12 +1,16 @@
 @font-face {
     font-family: 'papyrusregular';
     src: url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff2') format('woff2'),
-         url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff') format('woff');
+    	 url('mx/fonts/Papyrus_local_set/papyrus_local.woff2') format('woff2'),
+         url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff') format('woff'),
+		 url('mx/fonts/Papyrus_local_set/papyrus_local.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
-
+figure {
+	display: inline-block;
+}
 
 body {
 	font-family: 'papyrusregular', Arial, sans-serif;
@@ -23,9 +27,17 @@ p {
 	font-family: ;
 }
 a {
-  display: inline-block;
-  width: 240px;
+	display: inline-block;
 }
 span {
 	display: inline-block;
+}
+#sectionfloat {
+	float: lef;
+}
+section {
+	clear: both;
+}
+footer {
+	font-family: times;
 }
