--- a/mx/styles.css
+++ b/mx/styles.css
@@ -1,3 +1,4 @@
+/*                    FONTS                    */
 @font-face {
     font-family: 'papyrusregular';
     src: url('https://elstest.github.io/mx/fonts/Papyrus_local_set/papyrus_local.woff2') format('woff2'),
@@ -8,36 +9,75 @@
     font-style: normal;
 }
 
-figure {
+
+
+
+
+
+
+
+
+/*                    MAIN                    */
+main {
 	display: inline-block;
+	border-width: 1150px;
+	margin: 50px;
 }
+
+
+
+
+
+
+/*                    A                    */
+a, button {
+	display: inline-block;
+	text-align: center;
+	padding: 2px;
+	text-decoration: none;
+
+}
+a:hover {
+	background: #bfbfbf;
+	color: #ccccc;
+}
+
+
+
+
+
+
 
 body {
 	font-family: 'papyrusregular', Arial, sans-serif;
 	font-weight:normal;
 	font-style:normal;
 }
-main {
+figure {
 	display: inline-block;
-	border-width: 1150px;
-	margin: 50px;
 }
 p {
 	text-align: justify;
 	font-family: ;
 }
-a {
-	display: inline-block;
-}
 span {
 	display: inline-block;
 }
 #sectionfloat {
-	float: lef;
+	float: left;
 }
-section {
+section, hr {
 	clear: both;
 }
+
+
+
+
+
+
+
+
+/*                    FOOTER                    */
 footer {
 	font-family: times;
 }
