--- a/mx/styles.css
+++ b/mx/styles.css
@@ -13,27 +13,51 @@
 
 
 
-
-
-
-
-/*                    MAIN                    */
+/*                    MAIN: GENERAL RULES                    */
 main {
 	display: inline-block;
 	border-width: 1170px;
 	margin: 40px;
 }
-
-/*                    HEADER                    */
-h1 {
-	text-align: center; font-size: 350%;
+body {
+	background-color: #dcdcdc;
+	font-family: 'papyrusregular', Arial, sans-serif;
+	font-weight:normal;
+	font-style:normal;
+}
+span {
+	display: inline-block;
+	float: left;
 }
 section, hr {
 	clear: both;
 }
+figure {
+	display: inline-block;
+	float: left;
+	background-color:#bfbfbf;
+}
+p {
+	text-align: justify;
+}
+ul {
+	list-style-image: url("https://elstest.github.io/mx/logo_1.png")
+}
+
+
+
+
+/*                    HEADER/NAV                    */
+h1 {
+	text-align: center; font-size: 350%;
+}
 section.nav {
 	width: 95%; margin: 0 auto;
 }
+nav a {
+	font-weight: bold;
+}
+
 
 
 
@@ -55,6 +79,8 @@ a:focus {
 
 
 
+
+
 /*                    HISTOIRE                    */
 span.histoire {
 	overflow: auto;width: 40%;height: 300px;background-color: #fff20049;
@@ -63,32 +89,15 @@ p.histoire {
 	width: 85%; padding: 0% 7%;
 }
 figure.histoire {
-	width: 15%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 2%;
+	width: 15%; border: outset; padding: 1%; margin: 2%;
 }
 
 
 
 
 
+/*                    LOCALISATIONS                    */
 
-
-body {
-	background-color: #dcdcdc;
-	font-family: 'papyrusregular', Arial, sans-serif;
-	font-weight:normal;
-	font-style:normal;
-}
-figure {
-	display: inline-block;
-}
-p {
-	text-align: justify;
-	font-family: ;
-}
-span {
-	display: inline-block;
-	float: left;
-}
 span.localisations {
 	border: solid 1px #bfbfbf;
 	padding: 0% 1%;
@@ -96,15 +105,30 @@ span.localisations {
 	height: 300px;
 	margin: 3px;
 }
-ul {
-	list-style-image: 
+
+
+
+
+
+
+
+/*                    PERSONNAGES                    */
+td {
+	border: 1px solid #bfbfbf;
 }
-ul {
-	list-style-image: url("https://elstest.github.io/mx/logo_1.png")
+table {
+	border-collapse: collapse;
 }
-nav a {
+thead {
+	background-color: #bfbfbf;
 	font-weight: bold;
+	text-align: center;
 }
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+
 
 
 
